# auth-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml
examples/src/: dummy.rs  main.rs
src/: authenticator.rs  authuser.rs  config.rs  lib.rs  login.rs  loginform.rs  logout.rs  status.rs  userpass.rs
