[package]
name = "rocket_auth"
version = "0.4.0"
authors = ["Bram Vandenbogaerde", "Daniel Wiesenberg <weasy@hotmail.de>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
description="Simple username/password authentication system for Rocket"
license="LGPL-3.0"
homepage="https://github.com/bramvdbogaerde/auth-rs"
repository="https://github.com/bramvdbogaerde/auth-rs"
edition = "2018"

[dependencies]
rocket = "0.4.0"
