[package]
name = "rocket_auth"
version = "0.4.2"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
include = [
    "**/*.rs",
    "Cargo.toml",
]
description="Easy implementable authentication for Rocket"
license="MIT"
homepage="https://github.com/Weasy666/rocket_auth"
repository="https://github.com/Weasy666/rocket_auth"
edition = "2018"

[dependencies]
rocket = "0.4.2"
log = "0.4"